# codeTrimmer

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  checkstyle.xml  pom.xml
.github/workflows/: build.yml
code-trimmer-python/: .coverage  Dockerfile  README.md  pyproject.toml  requirements.txt
code-trimmer-python/codetrimmer/: __init__.py  __main__.py  app.py
code-trimmer-python/codetrimmer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
code-trimmer-python/codetrimmer/cli/: __init__.py  commands.py  options.py  output.py
code-trimmer-python/codetrimmer/config/: __init__.py  defaults.py  loader.py  models.py
code-trimmer-python/codetrimmer/error/: __init__.py  codes.py  exceptions.py
code-trimmer-python/codetrimmer/model/: __init__.py  binary_detector.py  file_result.py  statistics.py
code-trimmer-python/codetrimmer/service/: __init__.py  diff_generator.py  file_processor.py  hook_generator.py  report_generator.py  trimmer.py  undo_service.py
code-trimmer-python/codetrimmer/util/: __init__.py  color.py  constants.py
code-trimmer-python/python-docs/: ARCHITECTURE.md  CLI_REFERENCE.md  CONFIGURATION.md  ERROR_CODES.md  QUICKSTART.md  TROUBLESHOOTING.md
code-trimmer-python/python-docs/samples/: .codetrimmer.json  .codetrimmer.yaml  sample-rules.yaml
code-trimmer-python/tests/: __init__.py  conftest.py
code-trimmer-python/tests/unit/: test_binary_detector.py  test_cli_commands.py  test_color_output.py  test_config_loader.py  test_diff_generator.py  test_error_codes.py  test_exceptions.py  test_file_processor.py  test_file_trimmer.py  test_hook_generator.py  test_report_generator.py  test_trim_options.py  test_undo_service.py
docs/: AGENTS.md  ARCHITECTURE.md  CODE_QUALITY.md  COMPLETE_BUILD_SUMMARY.md  DOCUMENTATION_INDEX.md  IMPLEMENTATION.md  INDEX.md  PRD_CODE_TRIMMER_ENHANCEMENTS.md  PRD_CODE_TRIMMER_PYTHON.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md
docs/features/: configuration.md  custom-rules.md  pre-commit-hook.md  reporting.md  undo-restore.md
docs/samples/: .trimmerrc.json  .trimmerrc.yaml
docs/ways-of-work/plan/code-trimmer/: codeTrimmerPlan.md  prd-java-codeTrimmer.md
src/main/java/com/codetrimmer/: AppConstants.java  CodeTrimmerApplication.java
src/main/java/com/codetrimmer/command/: CodeTrimmerCommands.java
src/main/java/com/codetrimmer/config/: CodeTrimmerConfig.java  ConfigurationLoader.java  TrimmerConfig.java
src/main/resources/: application-properties.sample  application.yaml
src/test/java/com/codetrimmer/: CodeTrimmerApplicationTests.java  TestShellConfig.java
src/test/resources/: application-test.properties
(+34 files in other folders)
